# tmp

./: Cargo.toml  main.rs
docs/: Gemfile  index.md  talk.md
docs/_layouts/: slides.html
